Bug 1478685 - Set the RTP MID to the mid of the transceiver, not the transport id string. r=mjf, a=RyanVM

MozReview-Commit-ID: 30OrgQwpR8u

--HG--
extra : source : 56590b88c0412e04dd182a9500ba83bea8b86d13